tests/fixtures/invalid/pointer_array_typedef_alias.c
typedef int *IntPtr;
typedef IntPtr PtrArray[2];

int main(void) {
    return 0;
}
